# neo4j-blue-green-arrow-etl

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  PROJECT_STRUCTURE.md  README.md  SECRETS_SETUP.md  config.yaml  config.yaml.example  environment.yml  pyproject.toml  pytest.ini  setup.sh
docs/: ALIASES.md  BACKUP_RESTORE.md  CLUSTER_DEPLOYMENT.md  CODE_REVIEW.md  DEMO.md  DEMO_IMPROVEMENTS.md  ENHANCEMENT_PLAN.md  ENTERPRISE_REVIEW.md  GIT_HOOKS.md  MEMORY_MONITORING.md  ORCHESTRATOR.md  PREFECT_QUICKSTART.md  PREFECT_SETUP.md  PRESENTATION_TALKING_POINTS.md  PRODUCTION_IMPROVEMENTS.md  PRODUCTION_READY.md  REVIEW_SUMMARY.md  SECRETS.md  SETUP.md  SHARING.md  TEST_COVERAGE_ANALYSIS.md  TEST_IMPROVEMENTS_SUMMARY.md
scripts/: README.md  cleanup_demo.py  demo_workflow.py  load_with_aliases.py  manage_aliases.py  orchestrator.py  orchestrator_prefect.py  setup_demo_data.py  simulate_snapshot.py
source_data/nodes/Address/: addresses.parquet
source_data/nodes/Entity/: entities.parquet
source_data/relationships/HAS_AGENT_ADDRESS/: agent_address_relationship.parquet
source_data/relationships/HAS_MAILING_ADDRESS/: mailing_address_relationship.parquet
src/blue_green_etl/: __init__.py  config_loader.py  logging_config.py  neo4j_arrow_client.py  neo4j_arrow_error.py  neo4j_pq.py  neo4j_utils.py
tests/: README.md  conftest.py  test_load_with_aliases.py  test_logging_config.py  test_neo4j_arrow_client.py  test_neo4j_arrow_error.py  test_neo4j_utils.py  test_orchestrator_health.py  test_orchestrator_retry.py
(+1 files in other folders)
